# SCP

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: INTEGRATION.md  LEARNINGS_PROMPTFOO.md  OPENHARNESS_CONTRACT.md  RED_TEAM_PROMPTS.md  REFERENCE.md
docs/audit/: gui-2026-03-26.md
docs/brainstorms/: 2026-04-01-promptfoo-scp-learning-brainstorm.md
docs/contracts/: scp_mcp_v1.md
examples/: README.md  daggr_scp_pipeline.py
examples/promptfoo/: README.md  package-lock.json  package.json  promptfooconfig.yaml  scp_tier_provider.py
src/scp/: __init__.py  mask_secrets.py  ollama_url_guard.py  sanitize_input.py  scp_mcp.py  scp_semantic_judge.py  scp_structural.py  scp_threat_registry.json  scp_utils.py
src/scp_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_contract_document_hash.py  test_mcp_contract_v1.py  test_semantic_judge_ollama.py
